Created page with "= Information = This article is written for the Logitech G15 but it should work with other keyboards in the G-series produced by Logitech.  = Kernel configuration = To be able to..."

--- a/Logitech_G15.mw
+++ b/Logitech_G15.mw
@@ -1,136 +1,36 @@
+= Information =
 This article is written for the Logitech G15 but it should work with other keyboards in the G-series produced by Logitech.
 
-== Installation ==
+= Kernel configuration =
+To be able to use g15daemon used in this article you need to compile your kernel with uinput support
+Device Drivers -> Input Device ... -> Miscellaneous devices -> User level driver support.
 
-=== Kernel ===
+= make.conf =
 
-g15daemon requires user level driver support.
+{{File|make.conf ||<pre>LCD_DEVICES="g15"
+USE="g15 lcd_devices_g15 lcd"
+</pre> }}
 
-{{KernelBox|1=
-Device Drivers --->
-  Input Device support --->
-    [*]   Miscellaneous devices --->
-            <*>   User level driver support
-}}
+= G15Daemon / G15Macro =
+To get multimedia keys and LCD panel working properly you will need g15daemon, for the M^ and G^ keys to work you will also need g15macro.
+{{RootCmd
+|emerge g15daemon
+|emerge g15macro }}
 
-=== Portage ===
 
-To get other applications to know about the G15 keyboard, add the following to {{Path|/etc/portage/make.conf}}.
 
-{{FileBox|filename=/etc/portage/make.conf|lang=bash|1=
-LCD_DEVICES="g15"
-USE="g15 lcd"
-}}
+== Multimedia keys ==
 
-=== Emerge ===
+== G & M keys ==
 
-Install {{Package|app-misc/g15daemon}} for the multimedia keys and LCD display, and {{Package|app-misc/g15macro}} for the {{Key|M^}} and {{Key|G^}} keys.
+= Links =
 
-{{Emerge|app-misc/g15daemon app-misc/g15macro}}
+[https://help.ubuntu.com/community/LogitechG15] - Ubuntu community HOWTO.
 
-== Configuration ==
+[http://www.g15tools.com/] - website of g15tools (libg15, g15daemon,g15composer and other)
 
-After installing g15daemon and g15macro, check the g15daemon configuration file before starting the service. Normally the default values should work.
+[http://en.gentoo-wiki.com/wiki/Multimedia_Keys] Gentoo wiki site about setting up multimedia keys
 
-{{Note|Note the 24-hour clock format in {{Path|/etc/g15daemon.conf}}}}
+The original of this article is in Gentoo archives [http://www.gentoo-wiki.info/Logitech_G15 here]
 
-{{FileBox|filename=/etc/g15daemon.conf|1=
-# G15Daemon Configuration File
-# any items entered before a [section] header
-# will be in the Global config space
-# comments you wish to keep should start with a semicolon';'
-
-[Global]
-Use MR as Cycle Key: Off
-
-[PLUGIN_LOAD_ORDER]
-0: g15plugin_uinput.so
-1: g15plugin_clock.so
-2: g15plugin_tcpserver.so
-TotalPlugins: 3
-
-[PLUGINS]
-Linux UINPUT Keyboard Output: Load
-Clock: Load
-LCDServer: Load
-
-[Keyboard OS Mapping (uinput)]
-device: /dev/input/uinput
-Lkeys.mapped: 0
-
-[Clock]
-24hrFormat: On
-ShowDate: On
-Digital: On
-}}
-
-=== Xorg ===
-
-Optionally add the following to {{Path|/etc/X11/[[xorg.conf]]}}:
-
-{{FileBox|filename=/etc/X11/xorg.conf|lang=xorg.conf|1=
-Option         "XkbModel" "logitech_g15"
-}}
-
-=== Service ===
-
-==== OpenRC ====
-
-Configure the g15daemon service configuration file:
-
-{{FileBox|filename=/etc/conf.d/g15daemon|lang=bash|1=
-# Key to switch the client-screens. Default is the MR key,
-# Set to "yes" to use L1 key instead (black round key below the LCD, above the multimedia keys).
-CLIENT_SWITCH_L1="no"
-
-# Set to "yes" to switch off the lcd backlight when stopping g15daemon.
-BACKLIGHT_OFF="no"
-}}
-
-To start g15daemon:
-
-{{RootCmd|rc-service g15daemon start}}
-
-To start g15daemon at boot:
-
-{{RootCmd|rc-update add g15daemon default}}
-
-If everything worked correctly a clock should be visible on the G15 LCD display.
-
-== Usage ==
-
-=== Multimedia keys ===
-
-To have the new keys working in X11, create a specific xmodmap in your home directory or edit an existing one.
-
-Create the xmodmap:
-
-{{Cmd|cp /usr/share/g15daemon/contrib/xmodmaprc ~/.Xmodmap}}
-
-Adding keycodes to an existing xmodmap:
-
-{{Cmd|cat /usr/share/g15daemon/contrib/xmodmaprc >> ~/.Xmodmap}}
-
-To get the new keys you might need to restart your session or run:
-
-{{Cmd|xmodmap ~/.Xmodmap}}
-
-To check if your keys have been mapped correctly you can test them with {{Package|x11-apps/xev}}.
-
-=== G & M keys ===
-
-To get your {{Key|G^}} and {{Key|M^}} keys to work you need to start up g15macro, preferably you should make it start automatically with the rest of your desktop.
-
-{{Cmd|/usr/bin/g15macro &}}
-
-Your extra keys should now be working and you should be able to record macro keys by pushing the {{Key|MR}} key.
-
-== See also ==
-
-{{See also|Sidewinderd}}
-
-== External resources ==
-
-* [https://help.ubuntu.com/community/LogitechG15 LogitechG15 - Ubuntu Community Wiki]
-
-[[Category:Input devices]]
+[[Category:Hardware]]
