--- a/PulseAudio.mw
+++ b/PulseAudio.mw
@@ -1,370 +1,66 @@
-<languages/>
-{{InfoBox stack
-|{{InfoBox homepage|http://www.freedesktop.org/wiki/Software/PulseAudio|header=true}}
-|{{InfoBox wikipedia}}
-|{{InfoBox gitweb|http://cgit.freedesktop.org/pulseaudio/pulseaudio/|raw=true}}
-}}
-
-<translate>
-
-'''PulseAudio''' (or '''PA''' for short) is [[Article description::a sound server that provides a number of features on top of the low-level audio interface [[ALSA]] on Linux]], such as:
-
-* Networking support (P2P and server mode).
-* Per-application volume controls.
-* Better cross-platform support.
-* Dynamic latency adjustment, which can be used to save power.
-
-__TOC__
-
-== Installation ==
-
-=== Prerequisites ===
-
-PulseAudio uses:
-
-* [[Udev|sys-fs/udev]] and [[ConsoleKit|sys-auth/consolekit]] or
-* [[Systemd|sys-apps/systemd]]
-
-=== Kernel ===
-
-For motherboards containing Intel HDA sound cards, use the following kernel option for improved power-saving:
-
-{{KernelBox|1=
-Device Drivers  --->
-    <*> Sound card support  --->
-        <*> Advanced Linux Sound Architecture  --->
-            (2048) Pre-allocated buffer size for HD-audio driver
-}}
-
-<var>CONFIG_HIGH_RES_TIMERS</var> is needed to avoid <code>(snd_pcm_recover) underrun</code> errors and degraded audio when some applications are using pulseaudio:
-
-{{KernelBox|1=
-General setup  --->
-    Timers subsystem  --->
-        [*] High Resolution Timer Support
-}}
-
-{{Note|Not all applications require <var>CONFIG_HIGH_RES_TIMERS</var> to operate properly however it is recommended for applications like audacity and it is good practice to enable it anyway to ensure compatibility with more advanced audio applications.}}
-
-=== USE flags ===
-
-==== Global ====
-
-Portage knows the <code>pulseaudio</code> as a global USE flag for enabling support for PulseAudio in other packages. Enabling this USE flag will pull in {{Package|media-sound/pulseaudio}} automatically:
-
-{{FileBox|filename=/etc/portage/make.conf|lang=bash|1=
-USE="pulseaudio"
-}}
-
-==== Package ====
-
-{{USEflag|package=media-sound/pulseaudio}}
-
-=== Emerge ===
-
-After setting USE flags be sure to update the system so the changes take effect:
-{{Emerge|params+=--changed-use --deep|@world}}
-
-=== Additional software ===
-
-* {{Package|media-sound/pavucontrol}} - Pulseaudio Volume Control, a GTK+ based mixer for PulseAudio.
-* [https://github.com/GeorgeFilipkin/pulsemixer pulsemixer] - A tui (curses) mixer for PulseAudio.
-* {{Package|media-sound/paprefs}} - PulseAudio Preferences, a configuration dialogue for PulseAudio.
-* [[KDE]]'s Phonon integrated PulseAudio configuration and mixing, but it is not as powerful as pavucontrol or paprefs.
-
-== Configuration ==
-
-=== Permissions ===
-
-{{Note|This is the only supported configuration by upstream and Gentoo developers.}}
-
-PulseAudio uses [[udev]] and [[ConsoleKit]] to dynamically give access to the soundcards to the currently "active" nr. When running [[Systemd]] this will be handled without needing [[ConsoleKit]]. 
-
-To make this possible, ACLs (Access Control  Lists) are required:
-
-{{KernelBox|1=
-File systems  --->
-   Pseudo filesystems  --->
-      [*] Tmpfs virtual memory file system support (former shm fs)
-      [*]    Tmpfs POSIX Access Control Lists
-}}
-
-If a ''desktop'' [[Profile (Portage)|profile]] is not being used, check that {{Package|sys-auth/consolekit}} or {{Package|sys-apps/systemd}} are installed with the <code>acl</code> USE flag enabled, and (if using OpenRC) that {{Package|sys-auth/pambase}} is installed with the <code>consolekit</code> USE flag enabled. ConsoleKit should be running on systems using [[OpenRC]] as the init system:
-
-{{RootCmd|rc-service consolekit status|output=<pre>
-* status: started
-</pre>}}
-
-If not, enable it at boot time:
-
-{{RootCmd|rc-update add consolekit default}}
-You may find it necessary to start your X session with [[ConsoleKit#startx_integration|ck-launch-session]].
-
-When finished, verify the permissions are working correctly:
-{{Cmd|getfacl /dev/snd/controlC0 {{!}} grep -Eo "user:.+:"  {{!}} cut -d: -f2|output=
-<YOUR_USERNAME>
-}}
-
-{{Important|For consoleKit/systemd logind managed permissions to be respected, '''no one may be part of the ''audio'' group''' (not even even the user pulse). Remove any and all users from the audio group:
-{{RootCmd|gpasswd -d <user> audio}}
-}}
-
-=== Configuring other applications ===
-
-Some applications need to be configured to output to PulseAudio by default. A detailed list of these can be found on the PulseAudio wiki's [http://www.freedesktop.org/wiki/Software/PulseAudio/Documentation/User/PerfectSetup PerfectSetup page].
-
-;ALSA
-
-{{Note|If you previous had followed this article, upon upgrade to a fixed version (there should also be an einfo reminder), please remove the {{Path|asound.conf}} file.}}
-
-The {{Package|media-plugins/alsa-plugins}} must be installed with the <code>pulseaudio</code> USE flag enabled:
-
-{{Emerge|media-plugins/alsa-plugins}}
-
-;[[OSS]]
-You need to enable the following module in {{Path|/etc/pulse/default.pa}}:
-
-{{FileBox|filename=/etc/pulse/default.pa|1=
-load-module module-oss
-}}
-
-;GStreamer
-Several GConf keys must be set:
-
-* Manual with {{c|gconftool}}:
-
-{{Cmd
-|gconftool-2 -t string --set /system/gstreamer/0.10/default/audiosink pulsesink
-|gconftool-2 -t string --set /system/gstreamer/0.10/default/audiosrc pulsesrc
-}}
-
-{{Note|Some programs might still require GStreamer output plugin to be manually set to PulseAudio Audio Sink.}}
-
-;ESD
-Enable the following module in {{Path|/etc/pulse/default.pa}}:
-
-{{FileBox|filename=/etc/pulse/default.pa|1=
-load-module module-protocol-esound-unix
-}}
-
-Also {{c|eselect}} the PulseAudio implementation:
-
-{{RootCmd|eselect esd set esdcompat}}
-
-;libao
-Set the following in {{Path|/etc/libao.conf}}:
-
-{{FileBox|filename=/etc/libao.conf|1=
-default_driver=pulse
-}}
-
-;OpenAL
-Set the following in {{Path|/etc/openal/alsoft.conf}}:
-
-{{FileBox|filename=/etc/openal/alsoft.conf|1=
-drivers = pulse
-}}
-
-;[[MPlayer]]
-Set the following in {{Path|/etc/mplayer/mplayer.conf}}:
-
-{{FileBox|filename=/etc/mplayer/mplayer.conf|1=
-ao=pulse
-}}
-
-=== Without udev or systemd ===
-
-{{Warning|Using PulseAudio without udev or systemd is '''not''' recommended. It should be noted that this breaks both auto-detection and hot-plugging -- needlessly making your life harder -- as well as disabling ConsoleKit, essentially voiding the article. Please, if you have the possibility to use udev (and you most certainly have), just use it.}}
-
-If you are using ALSA as a PulseAudio sink (output) and routing ALSA apps to PA but not using udev, you must set a specific device to be used. Otherwise, PulseAudio will use the ALSA device "default" as the sink, which may be routed back to PulseAudio, forming a loop. To avoid this, add the parameter ''device=hw:0,0'' (you can find the correct IDs by running ''aplay -l''). In the following example, we use two soundcards, of which card 0, device 0 is used as a sink (audio output, e.g. speakers) and card 1, device 0 as a source (audio input, e.g. microphone). PulseAudio will still be able to access other cards than these but it needs these settings to avoid looping the ''default'' device in this setup.
-
-{{FileBox|filename=/etc/pulse/default.pa|title=Using a specific ALSA device as PulseAudio sink/source|1=
-load-module module-alsa-sink device=hw:0,0
-load-module module-alsa-source device=hw:1,0
-}}
-
-{{Note|If you forget to specify this when using the ALSA sink/source modules, you may not notice any problems until you restart PulseAudio (e.g. by logging out and back in or rebooting). You will be left with (obviously) no audio, a slow desktop environment and hanging applications until you resolve the loop, restart alsasound and kill all running pulseaudio processes.}}
-
-=== Headless server ===
- 	
-{{Dated|section}}
-
-These instructions are for setting up a headless pulse audio server. Meaning a server which has no display on it but does have speakers. This provides the ability to use the remote server's speakers for audio output.
-
-You will get warned in a dozen places for doing this, but it is the proper method.
-
-==== Server ====
-
-First configure USE flags and emerge the package. The system-wide USE flag is masked, so we have to unmask it.
-
-{{RootCmd|mkdir -p /etc/portage/profile|echo "-system-wide" >> /etc/portage/profile/use.mask|echo "media-sound/pulseaudio system-wide" >> /etc/portage/package.use}}
-
-{{Emerge|params+=--oneshot|pulseaudio}}
-
-Add the following two lines somewhere in the system.pa file:
-
-{{FileBox|filename=/etc/pulse/system.pa|1=
-load-module module-native-protocol-tcp auth-ip-acl=1.2.3.0/24
-load-module module-alsa-sink
-}}
-
-''Replace 1.2.3.0/24 with the network mask that you want to be able to access the server.''
-
-{{Note|If you have multiple ALSA devices, you will need to specify the device to use by adding <u>device</u> or <u>device_id</u> to the module-alsa-sink module}}
-
-Tell the init script that we really do want to do this, and then start it up:
-
-{{RootCmd
-|echo "PULSEAUDIO_SHOULD_NOT_GO_SYSTEMWIDE{{=}}1" >> /etc/conf.d/pulseaudio
-|rc-update add pulseaudio default|rc-service pulseaudio start
-}}
-
-==== Client ====
-
-{{Cmd|pacmd load-module module-tunnel-sink server{{=}}1.2.3.4|output=server (1.2.3.4) is the IP of the server.}}
-
-For a more permanent solution you can add the following to your default.pa file
-{{FileBox|filename=/etc/pulse/default.pa|1=
-load-module module-tunnel-sink server=1.2.3.4
-}}
-
-Now in the pulse audio volume control you should see the remote server listed under <u>Output Devices</u>. Under playback you should have a button next to the ''Mute audio'' button that when clicked will let you switch that audio stream to whichever output you want.
-
-=== Equalizer ===
-
-{{Note|The equalizer module is considered unstable and might be removed from pulseaudio. For more, see [http://lists.freedesktop.org/archives/pulseaudio-discuss/2014-March/020174.html the mailing list].}}
-
-Make sure you installed pulseaudio with the <code>equalizer</code> USE flag enabled.
-
-==== Enabling the required modules ====
-
-Add the following two lines somewhere in the default.pa file :
-
-{{FileBox|filename=/etc/pulse/default.pa|1=
-load-module module-dbus-protocol
-load-module module-equalizer-sink
-}}
-
-Restart the pulseaudio instance. This should be as easy as:
-
-{{cmd|pulseaudio -k |pulseaudio --start}}
-
-==== Choosing the equalizer sink ====
-
-The command should list the index and name of the equalizer sink:
-
-{{cmd|pacmd list-sinks <nowiki>|</nowiki> grep -B1 -e "name:.*equalizer"}}
-
-Use {{c|pavucontrol}} or a similar program like [https://github.com/GeorgeFilipkin/pulsemixer pulsemixer] to select the equalizer sink for sound output. It may be listed as a device starting with ''FFT based equalizer''.
-
-==== Control the equalizer levels ====
-
-The equalizer levels can now be controlled with the Qt GUI called {{c|qpaeq}}.
-
-==== Known issues ====
-
-* Short sound events (e.g. the terminal bell) distort ongoing sound streams (e.g. music)
-
-== Troubleshooting ==
-
-* {{Bug|pulseaudio|search=package}}
-* {{Bug|PulseAudio|site=fdo|search=product}}
-
-=== No sound ===
-
-* '''After installation''': If you have no sound while using ALSA, consider unmuting the sound card. Launch {{c|alsamixer}} and make sure each column has a green <code>00</code> under it (use the {{Key|m}} key to toggle mute/unmute). Install {{Package|media-sound/pavucontrol}} and check if there is any output on the pavucontrol panel when playing audio.
-* '''After upgrading the system''': pulseaudio's user configuration files can become corrupt. Deleting {{Path|~/.pulse*}} configuration files and forcing fresh ones to be generated by restarting the daemon may fix no sound condition. 
-
-=== Enable debug mode ===
-
-To get more informations you need to set the following in {{Path|/etc/pulse/daemon.conf}}:
-
-{{FileBox|filename=/etc/pulse/daemon.conf|1=
-log-level=debug
-}}
-
-Afterward restart the daemon:
-
-{{Cmd|pulseaudio -k}}
-
-=== Audio/Video out of sync ===
-
-When using PulseAudio over your local network, you can experience out-of-sync problems. Solve this by adding '''tsched=0''':
-
-{{FileBox|filename=/etc/pulse/default.pa|1=
-load-module module-udev-detect tsched=0
-}}
-
-This disables time scheduling. Afterwards restart the daemon:
-
-{{Cmd|pulseaudio -k}}
-
-=== Dummy output ===
-
-If the only playback device is the '''Dummy Output''', PulseAudio cannot access your sound devices. Either the user has no permissions (see section [[#Permissions|Permissions]] or another program blocks the access. Try:
-
-{{Cmd|fuser -v /dev/snd/*}}
-
-It shows the relevant program. Close the program and reconfigure it to use PulseAudio.
-
-=== No guarantees on actual latencies ===
-
-Currently PA provides whatever latency at that moment is possible be it some milliseconds to hundreds of milliseconds without regard to what applications ask for.
-
-=== In case of buffer under-run latencies are never decreased ===
-
+PulseAudio or PA for short is a sound server, a program that fixes a shortcoming of ALSA (also present in the obsolete OSSv3) where each physical device can be controlled by only one program at a time. Of course most people don't experience this shortcoming beause by default systems with ALSA will provide a software mixer known as dmix that allows for multiple programs to share a device. Unfortunately dmix has its share of problems and overall there`s more to be desired from ALSA like
+*networking support
+*per-application volume controls
+*configuration being more user friendly, for sake of argument the current state of ALSA
+**''asound.conf'' uses Lisp
+**''alsamixer'' has a history of misleading control lables
+*better cross-platform support
+*less/no interrupts generated together with large audio buffer, improving battery life
+
+PulseAudio can be thought as higher quality replacement for dmix although it tries to mend the other mentioned shortcomings as well.
+==Setup==
+===PA USE flags===
+Currently PulseAudio has quite a few USE flags but some of them are more important than others hence only portion of the available USE flags are being explained here.
+====Recommended====
+;alsa
+: PA is the top part of an audio stack hence PA itself needs support for some form of audio output, ALSA being the most common for non-professional systems
+;udev
+: provides hardware detection, helps greatly if ALSA applications are being routed via PA by default (see the plugin for alsa-lib)
+;realtime
+: enables PA to have real-time capabilities with the help of RealtimeKit
+;caps
+: allows PA to drop unneeded capabilities, increasing security
+;orc
+: improves performance of re-sampling (available only starting with PA 1.0)
+;X
+: X11 publish module, may help with setting up sound for networked X11 (also see the official USE flag explanation)
+====NOT recommended====
+;libsamplerate
+: provides exceptionally CPU intensive resamplers that are generally regarded as not worth it
+;system-wide
+: obsolete configuration where PA daemon is run system-wide (be sure to disable the X USE flag if you decide to go with this!)
+===Relevant USE flags for other ebuilds===
+;alsa
+: may be disabled for programms that have some other audio output enabled but leaving it enabled won't hurt
+;pulseaudio
+: please enable this if you want to use PA on your system
+===PA installation===
+The recommened way is to set pulseaudio USE flag for desired ebuilds and then run '''emerge -avuNDt world''' but if need be PA can be manually installed with '''emerge pulseaudio''' .
+===Making ALSA-only applications use PA===
+For applications with PA support, no additional setup is required but for ALSA-only applications to be able to benefit from PA, it's highly recommended that media-plugins/alsa-plugins ebuild is installed with pulseaudio USE flag (should be the case but it doesn't hurt to check) and ''/etc/asound.conf'' is edited to route them back to PA so that ALSA-only applications too can have improved mixing quality and per-application sound controls among other benefits. If you do this, it's important that udev is being used for hardware detection, else PA itself will be unable to access sound devices without custom configuration.<br />
+<pre>pcm.!default {
+        type pulse
+}
+ctl.!default {
+        type pulse
+}
+</pre>
+==Usage==
+A handy cross-desktop graphical tool is available for setting various aspects of PA. Install it with '''emerge media-sound/pavucontrol'''. KDE users can to some extent use Phonon configuration but it's not a full replacement for pavucontrol.
+==Configuring other applications==
+Usually PA is used by default if it`s available but some programs require to be explicitly told to use PA. If you know such program and it's not mentioned here, please add it!
+===MPlayer/MPlayer2===
+Edit ''~/.mplayer/config'' to something similar to<br />
+<pre>ao=pulse
+</pre>to make it use PA audio output driver for the current user.
+==Known problems and limitations==
+===No guarantees on actual latencies===
+Currently PA provides whatever latency at that moment is possible be it some milliseconds or hundreds of milliseconds without regard to what applications ask for.
+===In case of buffer under-run latencies are never decreased===
 Currently, if a buffer under-run occurs, PA buffers for longer increasing latency, but it then never tries to buffer for less until restart.
+===Re-sampling using up a lot of CPU time===
+Re-sampling can require quite a lot of computational power, PA defaults are rather conservative but in certain cases can still take a significant toll, in such cases edit '''/etc/pulse/daemon.conf''' and consider changing '''resample-method''' to something less CPU intensive, '''default-sample-format''' and '''default-sample-rate''' can also affect CPU utilization with floating point, higher bit-depth and larger difference in sample-rate generally needing more resources (e.g. re-sampling 44 kHz to 48 kHz is faster than re-sampling either to 192 kHz). Since re-sampling is done per each channel per input, channel configuration and number of applications can affect performance as well.
 
-=== Re-sampling using up a lot of CPU time ===
-
-Re-sampling can require quite a lot of computational power, PA defaults are rather conservative but in certain cases can still take a significant toll, in such cases edit {{Path|/etc/pulse/daemon.conf}} and consider changing ''resample-method'' to something less CPU intensive, ''default-sample-format'' and ''default-sample-rate'' can also affect CPU utilization with higher bit-depth and larger difference in sample-rate generally needing more resources (e.g. re-sampling 44.1 kHz to 48 kHz is faster than re-sampling either to 192 kHz). Since re-sampling is done per each channel per input, channel configuration and number of applications can affect performance as well.
-
-Starting with version 7.0 there is also soxr resamplers made available by enabling the ''sox'' USE flag. In particular ''resample-method = soxr-mq'' should provide acceptable quality while even the higher quality and hence slower soxr-hq is still cheaper than the default speex-float-1. But be warned that the soxr resamplers have roughly 5-20 times higher latency than speex-float, in terms of time the worst case for soxr-mq/hq can be as high as 20 ms while soxr-vhq latency can in few specific setups reach over 27 ms. In terms of feeling 20 ms can range from unnoticeable to irritating depending on person and use case (the usual PA latency's lower bound is around 20-25 ms and more commonly often around 70-90 ms, for comparison).
-
-{{Note|Using a version of PA with Orc support can noticeably decrease CPU usage, too. Also PA has the ability, if certain conditions are met, to automatically switch sinks between common sampling rates, this effectively can avoid some re-sampling.}}
-
-=== grsec and PulseAudio ===
-
-{{Note|Gentoo no longer provides sys-kernel/hardened-sources with the grsecurity patches. See [[https://gitweb.gentoo.org/repo/sync/gentoo.git/tree/metadata/news/2017-08-19-hardened-sources-removal/2017-08-19-hardened-sources-removal.en.txt this post]].}}
-
-Make sure <var>CONFIG_GRKERNSEC_SYSFS_RESTRICT</var> is not enabled if you are using a grsecurity kernel. PulseAudio’s module-udev-detect needs to access {{Path|/sys}} to discover what cards are available on the system, and that kernel option disallows this for anyone but root.
-
-=== Volume gets randomly louder or reset to 100% ===
-
-This may be caused by misbehaving PulseAudio-enabled programs when PulseAudio has ''flat volumes'' feature enabled. Disable it in daemon config:
-
-{{FileBox|filename=/etc/pulse/daemon.conf|1=
-flat-volumes = no
-}}
-
-=== In pavucontrol, unable to change output device for applications that use OpenALsoft ===
-[https://unix.stackexchange.com/questions/452907/pavucontrol-wont-change-output-on-some-apps source]
-
-It can happen that you want to change the output device for an application, but trying to change it in pavucontrol has no effect.
-If this application use OpenALsoft, this one has a configuration option that inhibits sink changes.
-To disable this option, you can create a configuration file for OpenALsoft :
-{{FileBox|filename=~/.config/alsoft.conf|1=
-[pulse]
-allow-moves=yes
-}}
-Or, by running '''alsoft-config''' :
-[[File:Alsoft-config.png|thumb|left]]
-
-=== FAQ ===
-
-See [http://www.freedesktop.org/wiki/Software/PulseAudio/FAQ#Troubleshooting PulseAudio's Frequently Asked Questions].
-
-== See also ==
-
-* {{See also|ALSA}}
-
-== External resources ==
-
-* [http://www.freedesktop.org/wiki/Software/PulseAudio/Documentation/User/PerfectSetup PulseAudio: The Perfect Setup]
-* [http://www.linux.com/news/hardware/drivers/8100-why-you-should-care-about-pulseaudio-and-how-to-start-doing-it Why you should care about PulseAudio (and how to start doing it)]
-* [https://wiki.archlinux.org/index.php/PulseAudio#Troubleshooting More general troubleshooting tips]
-
-</translate>
-
-[[Category:Multimedia]]
-[[Category:Daemons]]
+Using a version of PA with orc support can noticeably decrease CPU usage, too.
+===When using fast user switching only first user has sound===
+For fast user switching to work with PA, it`s important that kernel is compiled with '''CONFIG_TMPFS_XATTR=y''' and ConsoleKit is in use. It's also extremely important that '''no one is in the audio group''' (not even pulse itself), in fact, regular users don't have to be part of any specific group to have sound access.
