Created page with "'''The CHOST variable tells the compiler for which platform code should be build for.'''  Unlike the -march and -mcpu options, which are used for the optimizations, the CHOST var..."

--- a/CHOST.mw
+++ b/CHOST.mw
@@ -1,67 +1,9 @@
-The <var>CHOST</var> variable tells the compiler which platform code should be build for. Unlike the <var>[[GCC optimization|CFLAGS]]</var> variable, which is used for the optimizations, the <var>CHOST</var> variable is fixed and cannot be changed easily.
+'''The CHOST variable tells the compiler for which platform code should be build for.'''
 
-The [[Profile (Portage)|profile]] provides the default <var>CHOST</var> values, but it can be changed in the {{Path|/etc/portage/make.conf}} file.
+Unlike the -march and -mcpu options, which are used for the optimizations, the CHOST variable is rather fixed and cannot be changed easily. For this reason, if you need to switch CHOST variables, Gentoo generally recommends to install with the proper stage3 file.
 
-The variable is a dash-separated tuple in the form of ARCH-VENDOR-OS-LIBC:
+The CHOST variable is generally set in <code>/etc/make.conf</code>.
 
-{| class="table table-condensed table-striped"
-|-
-! Values !! Descriptions
-|-
-| ARCH || Specifies the CPU architecture.
-|-
-| VENDOR || Specifies the hardware platform or vendor.
-|-
-| OS || Specifies the operating system.
-|-
-| LIBC || Specifies the C library to use.
-|}
+=== Further resources ===
 
-Only ARCH is strictly required in all cases, but - for Linux machines at least - it is good practice to specify all four fields. The ''LIBC'' field is not supported for Gentoo/FreeBSD, so for these machines it must always be omitted.
-
-The following table lists some field values known to work:
-
-{| class="wikitable"
-|-
-! Architecture
-! Vendor
-! Operating System
-! C Library
-|-
-| required
-| optional
-| optional
-| optional
-|-
-|alpha<br />
-arm / armv4 / armv4t / armv5te / armv6j / armv7a<br />
-hppa / hppa1.1 / hppa2.0 / hppa64<br />
-i386 / i486 / i586 / i686<br />
-ia64<br />
-m68k<br />
-mips / mips64<br />
-powerpc / powerpc64<br />
-s390<br />
-sh / sh4 / sh64<br />
-sparc / sparc64<br />
-x86_64
-|gentoo<br />
-pc<br />
-softfloat<br />
-hardfloat<br />
-unknown
-|elf<br />
-gentoo-freebsd9.0<br />
-linux<br />
-uclinux
-|eabi<br />
-gnu<br />
-gnueabi<br />
-uclibc
-|}
-
-== See also ==
-
-* {{See also|Changing the CHOST variable}}
-
-[[Category:Portage]]
+* [http://www.gentoo.org/doc/en/change-chost.xml Changing the CHOST variable] guide on Gentoo.org
