Created page with "{{DISPLAYTITLE:trident}} ''trident'' is a family of the X.Org graphics drivers for [http://www.freebase.com/view/en/trident_microsystems Trident] graphics cards. This article det..."

--- a/Trident.mw
+++ b/Trident.mw
@@ -1,100 +1,64 @@
-{{Lowercase title}}
-'''trident''' is the open source graphics drivers for [[Wikipedia:Trident Microsystems|Trident]] graphics cards.
-
-== Installation ==
+{{DISPLAYTITLE:trident}}
+''trident'' is a family of the X.Org graphics drivers for [http://www.freebase.com/view/en/trident_microsystems Trident] graphics cards. This article details how to configure the kernel and your userspace in order to use the ''trident'' (tridentfb) driver.
 
 === Kernel ===
-
-You need to activate the following kernel options:
-{{KernelBox|
+You need to activate the following kernel options, note that you don't need to enable ''AGP Support'' if your card doesn't sit in a AGP slot:
+{{Kernel|Including trident driver|<pre>
 Processor type and features  --->
-    [*] MTRR (Memory Type Range Register) support
+	[*] MTRR (Memory Type Range Register) support
 Device Drivers  --->
-    Graphics support  --->
+	Graphics support  --->
+		<*> /dev/agpgart (AGP Support)  --->
+			<*> ALI chipset support
 
-        If your card sits in an AGP slot, choose your AGP driver:
-        (Note: ALI chipsets are typically bundled with Trident graphics cards in laptops)
-        <*> /dev/agpgart (AGP Support)  --->
-            <*> ALI chipset support
+			(NOTE: ALI chipsets are typically bundled with
+			Trident graphics cards in laptops, but choose your
+			own correct agpgart here!)
 
-        <*> Support for frame buffer devices  --->
-            [*] Enable firmware EDID
-            [*] VESA VGA graphics support
-            <*> Trident/CyberXXX/CyberBlade support
-}}
+			<*> Support for frame buffer devices  --->
+				[*] Enable firmware EDID
+				[*] VESA VGA graphics support
+				<*> Trident/CyberXXX/CyberBlade support
 
-=== Firmware ===
+				(NOTE: the above Trident support enables the Kernel
+				"tridentfb" framebuffer driver to be used
+				such as video=tridentfb:1024x768-16@60)
+</pre>}}
 
-Unknown IRQ microcode needed for Trident graphics support at this time, since the Kernel driver (tridentfb) should support most functions for Trident cards.
+===Firmware===
+Unknown IRQ microcode needed for Trident graphics support at this time, since the Kernel driver (tridentfb) should support most functions for Trident cards.  Unknown KMS details (may not work without it?).
 
-{{Package|x11-drivers/xf86-video-trident}} is an old video card and old driver. It has no corresponding KMS (Kernel ModeSetting), at least in recent (3.12.21) kernels.
-Although in some distros (AFAIK Fedora 21) such drivers were removed, to my experience it works without KMS. At least with =x11-base/xorg-server-1.15.0.
-
-Make sure firmware for your model (check available ones in {{Path|/lib/firmware/trident}}) is included in kernel:
-{{KernelBox|title=Including trident firmware|
+Make sure firmware for your model (check available ones in <tt>/lib/firmware/trident</tt>) is included in kernel:
+{{Kernel|Including trident firmware|<pre>
 Device Drivers  --->
 	-*- Userspace firmware loading support
 	[*] Include in-kernel firmware blobs in kernel binary
 		(trident/<YOUR-MODEL>.bin)
 		(/lib/firmware) Firmware blobs root directory
-}}
+</pre>}}
 
 Below is a list of the firmware files needed for each family of cards:
 
 No known firmware files are needed for any particular Trident card at this time.
 
-=== Driver ===
-
-{{VIDEO_CARDS|trident}}
-
-== Configuration ==
-
-=== Permissions ===
-
-{{VIDEO CARDS/Permissions}}
-
-=== xorg.conf ===
-
-The [[X server]] is designed to work out-of-the-box, with no need to manually edit X.Org's configuration files. It should detect and configure devices such as displays, keyboards, and mice.
-
-However, the main configuration file of the X server is the [[xorg.conf]].
-
-You can force the X server to use desired driver with:
-{{VIDEO CARDS/xorg.conf|trident}}
-
-To my experience quoted config don't works.
-Last error message in {{Path|Xorg.log}} is:
-<pre>[   218.176] (II) Loading sub module "xaa"
-[   218.176] (II) LoadModule: "xaa"
-[   218.177] (WW) Warning, couldn't open module xaa
-[   218.178] (II) UnloadModule: "xaa"
-[   218.178] (II) Unloading xaa
-[   218.178] (EE) TRIDENT: Failed to load module "xaa" (module does not exist, 0)</pre>
-
-Adding to {{Path|trident.conf}} the option:
-
-{{FileBox|filename=/etc/X11/xorg.conf.d/trident.conf|lang=xorg.conf|1=
-Option		"AccelMethod" "EXA"
-}}
-
-makes xorg server operable.
-
 === Framebuffer (GRUB or LILO)===
 
-{{CodeBox|1=
 video=tridentfb:1024x768-16@60
-}}
-== Documentation ==
 
-Full Documentation can be found under {{Path|/usr/src/linux/Documentation/fb/tridentfb.txt}}.
+=== Driver ===
+{{VIDEO_CARDS|trident}}
+
+You can force X11 to use desired driver with:
+{{VIDEO CARDS/xorg.conf|trident}}
+
+== Permissions ==
+{{VIDEO CARDS/Permissions}}
 
 == Troubleshooting ==
-
 * {{Bug|xf86-video-trident|search=package}}
 * {{Bug|xf86-video-trident|site=fdo|search=package}}
 
-== External resources ==
-
-* [http://wiki.x.org/wiki/trident X.Org Wiki]
+== Links ==
+* [http://wiki.x.org/wiki/trident X.Org Wiki - trident]
 
 [[Category:Graphics Adapters]]
