www-client/epiphany: made page and added info on flash support (which took a while for me to figure out)

--- a/Epiphany.mw
+++ b/Epiphany.mw
@@ -1,20 +1,22 @@
-'''Epiphany''' is [[Article description::a simple, fast Webkit web browser for [[GNOME]].]]
+A simple, fast Webkit web browser for GNOME.
 
 == Installation ==
 
-=== USE flags ===
+<code>emerge epiphany</code>
 
-{{USEflag|package=www-client/epiphany}}
+USE Flags:
 
-=== Emerge ===
+<b>avahi</b> -- Add avahi/Zeroconf support<br>
+<b>debug</b> -- Enable extra debug codepaths, like asserts and extra output. If you want to get meaningful backtraces see http://www.gentoo.org/proj/en/qa/backtraces.xml<br>
+<b>doc</b> -- Enable documentation.<br>
+<b>introspection</b> -- Use gobject-introspection for introspection<br>
+<b>networkmanager</b> -- Enable networkmanager support.<br>
+<b>nss</b> -- Import passwords from older gecko-based epiphany keyring.
 
-{{Emerge|www-client/epiphany}}
+== Flash support ==
 
-=== Additional software ===
-
-For Flash support install {{Package|www-plugins/adobe-flash}}
-
-{{Emerge|www-plugins/adobe-flash}}
+In order to get flash support: <code>emerge adobe-flash</code>.  And then, <code>emerge nspluginwrapper</code>.  
  
-[[Category:GNOME]]
-[[Category:Web_browser]]
+Execute the following command to get flash working in Epiphany (on 32 bit): <code>/usr/lib/nspluginwrapper/i386/linux/npconfig -v -a -n -i</code>.  
+
+For 64 bit, change i386 in the previous command to x86_64.
