--- a/Bluetooth_headset.mw
+++ b/Bluetooth_headset.mw
@@ -1,370 +1,24 @@
-<languages />
-<translate>
-
-This article [[Article description::describes the configuration of Bluetooth [[wikipedia:Headset_(audio)|headsets]] within Gentoo Linux.]]
-
-== Prerequisites ==
-
-The configurations for [[Bluetooth]] and [[ALSA]] must have been previously completed.
-
-== Configuration ==
-
-=== PulseAudio ===
-
-Following instructions from [[PulseAudio]] and [[Bluetooth#BlueZ_5|BlueZ 5]] should be sufficient to make Bluetooth headsets work (through ''pavucontrol'' for instance).
-
-=== ALSA + Bluez 5 ===
-
-If you do not want to use PulseAudio, you can use [https://github.com/Arkq/bluez-alsa bluez-alsa] to provide integration between Bluez and ALSA.
-
-* Install bluez-alsa:
-  {{Emerge|media-sound/bluez-alsa}}
-* In your ALSA configuration, {{Path|/etc/asound.conf}} (system-wide) or {{Path|~/.asoundrc}} (user-level), specify the parameters of the Bluetooth connection (replace the MAC address with the MAC address of your device)
-{{FileBox|filename=/etc/asound.conf or ~/.asoundrc|1=
-# Bluetooth headset
-defaults.bluealsa {
-     interface "hci0"            # host Bluetooth adapter
-     device "10:4F:A8:00:11:22"  # Bluetooth headset MAC address
-     profile "a2dp"
-}
-}}
-A static ALSA configuration is also possible, make sure to change the device name in the below examples for aplay.
-
-{{FileBox|filename=/etc/asound.conf or ~/.asoundrc|1=
-# Bluetooth headset
-pcm.btheadset {
-        type plug
-        slave.pcm {
-                type bluealsa
-                device "10:4F:A8:00:11:22"
-                profile "a2dp"
-        }
-        hint {
-                show on
-                description "Your description of Bluetooth Headset"
-        }
-}
-}}
-
-* Make sure the ''bluetooth'' and ''bluealsa'' services are started. You probably want to add them to your default runlevel via ''rc-config''.
-* Make sure the device is paired and connected to your computer. See [[Bluetooth]] for details.
-* Test with e.g. aplay, passing the PCM device 'bluealsa'
-{{Cmd|aplay -D bluealsa some_file.wav}}
-* For other applications, the precise option to set the output device may differ.
-
-{{Note|Changes to ALSA configuration files {{Path|/etc/asound.conf}} and {{Path|~/.asoundrc}} are picked up automatically at application start, you don't need to restart the ''alsasound'' service.}}
-
-* Hardware volume control:
-  {{Cmd|alsamixer -D bluealsa}}
-
-== Testing ==
-
-* Play a sound file.
-{{Cmd|mplayer -ao alsa:device{{=}}bluealsa ''filename''}}
-Or with [[mpv]]:
-{{Cmd|mpv --audio-device{{=}}alsa/bluealsa ''filename''}}
-If it works, please add your device to the table of [[#Working_devices|working]] devices.
-
-== Working devices ==
-
-{{Note|The capabilities of the device are dependent on the Bluetooth controller being used.}}
-{| class="table"
-|-
-! Device
-! Headphone
-! Microphone
-! BlueZ Version
-! Notes
-|-
-| AfterShokz TREKZ Titanium
-| {{yes}}
-| {{Partial|Not tested}}
-|align="center" | 5.50-r2
-| 
-|-
-| Bose SoundSport Free (774373-0010)
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | 5.48-r1
-|
-|-
-| Cellular Innovations HFBLU-ST6
-| {{Yes}}
-| {{No}}
-| align="center" | ?
-| 
-|-
-| Dell BH200
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | ?
-| 
-|-
-| Google Pixel Buds
-| {{Yes}}
-| {{Yes}}
-| align="center" | 5.49-r1
-| 
-|-
-| Huawei FreeBuds
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | 5.49-r1
-| 
-|-
-| Jabra MOVE v2.3.0
-| {{Yes}}
-| {{Yes}}
-| align="center" | 5.39
-| If supported, AAC codec is selected, otherwise SBC
-|-
-| JBL E40BT
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | 5.47
-|
-|-
-| JBL GO+
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | 5.50-r2
-|
-|-
-| JBL T450BT
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | 5.43
-|
-|-
-| LG HBS730
-| {{Yes}}
-| {{No}}
-| align="center" | ?
-| 
-|-
-| Nokia BH-214
-| {{Yes}}
-| {{No}}
-| align="center" | 4.101 & 5.39
-| 
-|-
-| Nokia BH-604
-| {{Yes}}
-| {{Yes}}
-| align="center" | ?
-| 
-|-
-| Parrot Zik
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | ?
-| 
-|-
-| Philips SBH6201
-| {{Yes}}
-| {{Yes}}
-| align="center" | ?
-| 
-|-
-| Philips SBH9100
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | ?
-| 
-|-
-| Pioneer SE-MS9BN-G
-| {{Yes}}
-| {{Yes}}
-| align="center" | 5.50-r1
-| Microphone tested successfully with BlueZ 5.50-r1 and HSP/HFP profile. Volume and play-pause buttons recognized as Multimedia events in Xfce (XF86AudioNext - XF86AudioPrev - XF86AudioPlay). No special bluetooth configuration is required. You should only make sure that pulseaudio is built with native-headset useflag, and that pulseaudio spawns correctly from your X session.
-| 
-|-
-| Plantronics BackBeat GO
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | ?
-| 
-|-
-| Prestigio PBHS1
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | ?
-| 
-|-
-| Sennheiser HD 4.40 BT
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | 5.50-r2
-| 
-|-
-| Sennheiser MM 550-X Travel
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | 5.27
-| Microfone tested successfully in 2011 with BlueZ 4.x/HSF
-|-
-| Sennheiser PXC 550
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | 5.50-r1
-| Confirmed working with older versions, but not sure how far back. Tested with bluez-alsa (currently 1.3.1), not Pulse Audio. Media controls not tested.
-|-
-| Sennheiser URBANITE XL Wireless
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | 5.46
-| Volume swipes are working
-|-
-| Sony DR-BTN200
-| {{Yes}}
-| {{No}}
-| align="center" | 5.39
-| All buttons except "Call" work and can be assigned shortcuts in the DE
-|-
-| Sony MDR-1000X
-| {{Yes}}
-| {{No}}
-| align="center" | 5.50-r3
-| Volume swipes are working, prev/next swipes don't work.
-|-
-| Sony MDR-ZX750BN
-| {{Yes}}
-| {{No}}
-| align="center" | ?
-| The change track and volume buttons work.
-|-
-| Sony MDR-ZX770BT
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | 4.101 & 5.25
-| 4.101 requires Enable=Socket in /etc/bluetooth/audio.conf
-|-
-| Sony SBH20
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | ?
-|
-|-
-| Sony SBH52
-| {{Yes}}
-| {{Yes}}
-| align="center" | ?
-| The buttons work and can be assigned actions in KDE. Supported rate 4800.
-|
-|-
-| Sony WH-CH700N
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | 5.50-r3
-| Volume control works. BlueZ 5: blue-alsa
-|-
-| Sony WH-1000XM3
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | ?
-| The touch interface on the right speaker works.
-|
-|-
-| Sony Ericsson HBH-DS200
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | 4.101 & 5.43
-| BlueZ 4: software volume control via .asoundrc. BlueZ 5: BlueALSA
-|-
-| Sony Ericsson HBH-DS970
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | ?
-| Requires ''Enable=Socket'' in {{Path|/etc/bluetooth/audio.conf}}.
-|-
-| Soundcore Spirit Bluetooth Headphones
-| {{Yes}}
-| {{Partial|Not tested}}
-| align="center" | 5.50-r2
-| 
-|-
-| Teufel MUTE BT
-| {{yes}}
-| {{yes}}
-|align="center" | 5.47
-| 
-|-
-|}
-
 == Troubleshooting ==
-
-=== Can't open input device ===
-
-Compile and load the ''uinput'' kernel module, when things don't work, and the logs show this error:
-{{CodeBox|1=
-bluetoothd: Can't open input device: No such file or directory (2)
-bluetoothd: AVRCP: failed to init uinput for 00:16:44:FD:6B:A0
-bluetoothd: Unable to select SEP
-}}
-
-{{KernelBox|1=
-Device Drivers  --->
-   Input device support  --->
-      [*]   Miscellaneous devices  --->
-         <M>   User level driver support
-}}
-
 === No audio service is available ===
-
-After updating to {{Package|net-wireless/bluez}}-5.xx it might happen, that a Bluetooth headset is connected, but [[ALSA]] / [[PulseAudio]] fails to pick up the connected device.
+After updating to {{Package|net-wireless/bluez}}-4.97 it might happen, that a Bluetooth headset is connected, but ALSA/PulseAudio fail to pick up the connected device.
 
 An error message like this might be shown in the output of PulseAudio:
-{{CodeBox|1=
-I: [pulseaudio] module-card-restore.c: Restoring profile for card bluez_card.00_16_94_0B_6F_DE.
+{{Code|I: [pulseaudio] module-card-restore.c: Restoring profile for card bluez_card.00_16_94_0B_6F_DE.
 I: [pulseaudio] card.c: Created 10 "bluez_card.00_16_94_0B_6F_DE"
 bt_audio_service_open: connect() failed: Connection refused (111)
 W: [pulseaudio] module-bluetooth-device.c: Bluetooth audio service not available
 W: [pulseaudio] module-bluetooth-device.c: Service not connected
 I: [pulseaudio] card.c: Freed 10 "bluez_card.00_16_94_0B_6F_DE"
-E: [pulseaudio] module.c: Failed to load module "module-bluetooth-device" (argument: "address="00:16:94:0B:6F:DE" path="/org/bluez/31716/hci0/dev_00_16_94_0B_6F_DE""): initialization failed.
-}}
+E: [pulseaudio] module.c: Failed to load module "module-bluetooth-device" (argument: "address="00:16:94:0B:6F:DE" path="/org/bluez/31716/hci0/dev_00_16_94_0B_6F_DE""): initialization failed.}}
 
 To fix this, the following needs to be done:
-# Enable the audio socket of bluetoothd
-{{FileBox|filename=/etc/bluetooth/audio.conf|lang=ini|1=
+# Set ''Enable=Socket'' in ''/etc/bluetooth/audio.conf'' like this:
+{{File|/etc/bluetooth/audio.conf|Enable audio socket|<pre>
 [General]
 Enable=Socket
-}}
+</pre>}}
 # Restart ''bluetoothd'' by doing one of the following things:
-#* Turn the software wireless kill switch off and on again
-{{RootCmd|rfkill block bluetooth
-|rfkill unblock bluetooth}}
+#* Turn the software wireless kill switch off and on again{{RootCmd|rfkill block bluetooth}}{{RootCmd|rfkill unblock bluetooth}}
 #* Turn the hardware wireless kill switch off and on again
 #* Reboot the computer
 # Reconnect the Bluetooth headset
-
-=== Audio device not visible when using GDM ===
-
-If you are using GDM, but not logging into GNOME (e.g. i3 instead), GDM might block your headset, which will it not being available for PulseAudio. This will result in your headset being connected, but the applications won't see it.
-
-As a workaround, you can switch to a different display manager (e.g. LXDM), or disable PulseaAudio for GDM<ref>Stanislav Naumuk. [https://wiki.debian.org/BluetoothUser/a2dp#Workaround_1:_disable_pulseaudio_in_gdm Bluetooth a2dp], [https://wiki.debian.org/FrontPage Debian Wiki], June 13th, 2015. Retrieved on March 18th, 2019.</ref>:
-
-{{FileBox|filename=/var/lib/gdm/.config/pulse/client.conf|lang=ini|1=
-autospawn = no
-daemon-binary = /bin/true
-}}
-
-If you have created the file, make sure that GDM can read it:
-
-{{RootCmd|chown gdm:gdm /var/lib/gdm/.config/pulse/client.conf}}
-
-== See also ==
-
-* [[MPD#Bluetooth_headset_.28optional.29|Music Player Daemon (Bluetooth headset)]]
-
-== External resources ==
-
-* [https://forums.gentoo.org/viewtopic-p-7559356.html Gentoo Forums - Use headsets with Bluez 5 mini HowTo]
-
-== References ==
-
-{{reflist}}
-
-</translate>
-
-[[Category:Sound devices]]
